# programming-labs

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt  submit.py
.github/workflows/: smoke.yaml  submission.yaml  trigger.yaml
00_test/: CMakeLists.txt  declarations.h  sum.cpp  sum_test.cpp
04_arrays/: CMakeLists.txt  declarations.h  public_test.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
06_big_integer/: CMakeLists.txt  big_integer.cpp  big_integer.h  public_test.cpp
07_matrix/: CMakeLists.txt  matrix.cpp  matrix.h  public_test.cpp
07_matrix/helpers/: lab_helpers.cpp  lab_helpers.h  stb_image.h  stb_image_write.h
08_population/: CMakeLists.txt  Country.cpp  Country.h  CountryService.h  Program.h  TestProgram.cpp  countries.csv  world_population_1960-2018.csv
09_big_float/: CMakeLists.txt  big_float.h  big_integer.cpp
10_stack/: CMakeLists.txt  eval_expression.cpp  eval_expression.h  eval_min_max.cpp  eval_min_max.h  stack.h
11_table/: CMakeLists.txt  shape_cell.cpp  string_cell.cpp  string_cell.h  table.cpp  table_test.cpp  testing.h
12_stl/: CMakeLists.txt
cmake/: BuildConfig.cmake  ClangTidyCheck.cmake
isolated-bare-env/: Dockerfile
lab04/: CMakeLists.txt  declarations.h  public_test.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
oracle/: CMakeLists.txt
tools/: add-python-scripts-to-path.ps1
tools/util/: assert.h  not_implemented.h
